tests/od2trips/errors/testsuite.od2trips
# Errors in options
false_options

# Format errors in read O/D-matrices
format

# Incomplete (unknown) districts
incomplete_districts

# Incomplete (unknown) district connections
incomplete_connections


# Default departlane is false
default_false_departlane

# Default departpos is false
default_false_departpos

# Default departspeed is false
default_false_departspeed

# Default arrivallane is false
default_false_arrivallane

# Default arrivalpos is false
default_false_arrivalpos

# Default arrivalspeed is false
default_false_arrivalspeed


